--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,9 @@ google-api-python-client==2.147.0
 google-auth==2.35.0
 google-auth-oauthlib==1.2.1
 
+# --- HTTP client for Vercel Blob uploads ---
+httpx==0.27.0
+
 # --- Other helpers ---
 pydantic==2.9.2
 pydantic-core==2.23.4
