--- a/vercel.json
+++ b/vercel.json
@@ -15,13 +15,5 @@
       "dest": "index.py"
     }
   ],
-  "env": {
-    "ADMIN_TOKEN": "@admin_token",
-    "GOOGLE_CALENDAR_ID": "@google_calendar_id",
-    "GOOGLE_CLIENT_EMAIL": "@google_client_email",
-    "GOOGLE_PRIVATE_KEY": "@google_private_key",
-    "BLOB_READ_WRITE_TOKEN": "@blob_read_write_token",
-    "ALLOWED_ORIGIN": "@allowed_origin",
-    "REDIS_URL": "@redis_url"
-  }
+  "env": {}
 }
